--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Everything's Blog
+title : _Legolas_'s Blog
 tagline: Site Tagline
-author :
-  name : Zqy_everything
+author : _Legolas_
+  name : _Legolas_
   email : zhangqingyang.2009@163.com
   github : everything
   twitter : username
