--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ pygments: true
 title : _Legolas_'s Blog
 tagline: Site Tagline
 author : _Legolas_
-  name : _Legolas_
+  name : everything
   email : zhangqingyang.2009@163.com
   github : everything
   twitter : username
