--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ pygments: true
 #
 title : _Legolas_'s Blog
 tagline: Site Tagline
-author : _Legolas_
-  name : everything
+author : 
+  name : Zqy_everything
   email : zhangqingyang.2009@163.com
   github : everything
   twitter : username
